--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-motion": "^0.5.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
