--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.7.0",
     "antd": "^3.11.0",
     "events": "^3.0.0",
     "hex-rgb": "^3.0.0",
@@ -14,6 +15,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-transition-group": "^2.5.3",
     "redux": "^4.0.1"
   },
   "scripts": {
