--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "antd": "^3.11.0",
+    "dayjs": "^1.8.6",
     "events": "^3.0.0",
     "hex-rgb": "^3.0.0",
     "node-sass": "^4.10.0",
