--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dayjs": "^1.8.6",
     "events": "^3.0.0",
     "hex-rgb": "^3.0.0",
+    "node-sass": "^4.11.0",
+    "qs": "^6.7.0",
     "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
