--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minimo",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "dayjs": "^1.8.6",
     "events": "^3.0.0",
